meeting 006 moved to monday

--- a/_posts/2016-03-14-metting-006.md
+++ b/_posts/2016-03-14-metting-006.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title:  "Meeting Thursday, March 17th"
+title:  "Meeting Thursday, March 17th (Moved to Monday)"
 date:   2016-03-14 09:41:22
 categories: meetings
 ---
-Our next Computer Club meeting is this Thursday!!
+**Edit: The meeting has been moved to Monday.**
+
+Our next Computer Club meeting is this Thursday!
 
 I'm up to bring anything, just let me know what you'd like.
 Of course, if you'd like to bring something yourself, as usual you may.
